# auto-multiple-choice

./: .gitignore  .gitlab-ci.yml  .hgignore  AMC-analyse.pl  AMC-analyse.pl.in  AMC-annotate.pl  AMC-annotate.pl.in  AMC-annote.pl  AMC-annote.pl.in  AMC-association-auto.pl  AMC-association-auto.pl.in  AMC-association.pl  AMC-association.pl.in  AMC-buildpdf.cc  AMC-calepage.pl  AMC-db.pl.in  AMC-decode.pl  AMC-decode.pl.in  AMC-detect.cc  AMC-export.pl  AMC-export.pl.in  AMC-external.pl  AMC-external.pl.in  AMC-gathermulticode.pl  AMC-gathermulticode.pl.in  AMC-getimages.pl  AMC-getimages.pl.in  AMC-gui-apropos.glade  AMC-gui-apropos.glade.in  AMC-gui-choix_pages_impression.glade  AMC-gui-choix_postcorrect.glade  AMC-gui-choix_projet.glade  AMC-gui-choose-mode.glade  AMC-gui-choose_students.glade  AMC-gui-cleanup.glade  AMC-gui-edit_preferences.glade  AMC-gui-liste_dialog.glade  AMC-gui-mailing.glade  AMC-gui-main_window.glade  AMC-gui-make_template.glade  (+74 more)
AMC-perl/AMC/: ANList.pm  Annotate.pm  AssocFile.pm  Basic.in.pm  Basic.pm  Basic.pm.in  Boite.pm  Calage.pm  Config.pm  Data.pm  DataModule.pm  Decoder.pm  Encodings.pm  Exec.pm  Export.pm  FileMonitor.pm  Filter.pm  Gui.pm  Image.pm  MEPList.pm  Messages.pm  NamesFile.pm  Path.pm  Print.pm  Project.pm  Queue.pm  Scoring.pm  ScoringEnv.pm  State.pm  Subprocess.pm  Substitute.pm  Topics.pm  TopicsTest.pm  TopicsTestResult.pm
AMC-perl/AMC/DataModule/: association.pm  capture.pm  layout.pm  report.pm  scoring.pm  test.pm
AMC-perl/AMC/Decoder/: Barcode.pm  BarcodeTail.pm  register.pm
AMC-perl/AMC/Export/: CSV.pm  List.pm  ods.pm  register.pm
AMC-perl/AMC/Filter/: latex.pm  plain.pm  register.pm
AMC-perl/AMC/Gui/: APropos.glade  APropos.glade.in  APropos.pm  Association.glade  Association.glade.in  Association.pm  AutoCapture.glade  AutoCapture.pm  AutoCaptureChooseMode.glade  Avancement.pm  ChooseColumns.glade  ChooseColumns.pm  Cleanup.glade  Cleanup.pm  Commande.pm  CreateProject.pm  CreateProjectFile.glade  CreateProjectModel.glade  CreateProjectOption.glade  CreateProjectZip.glade  FilterDetails.glade  FilterDetails.pm  Learning.pm  Mailing.glade  Mailing.pm  Main.glade  Main.pm  Main.pm.in  Manuel.glade  Manuel.glade.in  Manuel.pm  Notes.glade  Notes.glade.in  Notes.pm  Overwritten.glade  Overwritten.pm  PageArea.pm  Postcorrect.glade  Postcorrect.pm  Preferences.glade  (+25 more)
AMC-perl/AMC/Print/: cups.pm  cupslp.pm
I18N/: Makefile  auto-multiple-choice.pot  po-clean.pl  po-clean.pl.in
I18N/lang/: ar.po  ca.po  de.po  es.po  fr.po  ja.po  pt_BR.po  pt_PT.po  ta.po
debian/: auto-multiple-choice-doc-pdf.doc-base  auto-multiple-choice-doc-pdf.install  auto-multiple-choice-doc.doc-base  auto-multiple-choice.docs  auto-multiple-choice.install  auto-multiple-choice.manpages  auto-multiple-choice.menu  auto-multiple-choice.postrm  auto-multiple-choice.substvars  changelog  control  copyright  docs  files  menu.in  rules  watch
debian/auto-multiple-choice/DEBIAN/: control  md5sums  postinst  postrm
doc/: Makefile  Makefile-site  addlink.pl  amcdocstyle.sty.in  auto-multiple-choice.en.in.xml  auto-multiple-choice.fr.in.xml  auto-multiple-choice.in.xml  auto-multiple-choice.ja.in.xml  auto-multiple-choice.xml  check_xml  custom.xsl  customl10n.xml  doc-xhtml-site.en.xsl.in  doc-xhtml-site.fr.xsl.in  doc-xhtml-site.ja.xsl.in  doc-xhtml-site.xsl  doc-xhtml-site.xsl.in  doc-xhtml.xsl  extrait-fichiers.pl  index.pl  traductions
doc/exemples/: bareme.txt  ensemble.txt  groupes.txt  simple.tex  simple.txt
doc/modeles/other/: directory.xml
doc/modeles/survey/: description.xml
doc/sty/: Makefile  automultiplechoice.dtx.in
interfaces/: amc-txt.lang  auto-multiple-choice.xml
lib/: Makefile.am
lib/AMC/: Annotate.pm  Basic.pm  Data.pm  Exec.pm  Filter.pm  Print.pm  Queue.pm  Scoring.pm  ScoringEnv.pm  State.pm  Subprocess.pm  Substitute.pm
lib/AMC/DataModule/: capture.pm  layout.pm  scoring.pm
libexec/AMC/: AMC-association-auto.pl  AMC-export.pl  AMC-gui-apropos.glade.in  AMC-gui-choix_projet.glade  AMC-gui-edit_preferences.glade  AMC-gui-filter_details.glade  AMC-gui-mailing.glade  AMC-gui-source_latex_choix.glade  AMC-latex-link.pl.in  AMC-mailing.pl  AMC-manuel.pl  AMC-prepare.pl  buildpdf.cc  minimal-getline.c  pdfformfields.c
libexec/exec/: AMC-buildpdf.cc  AMC-detect.cc  Makefile.am
libexec/perl/: AMC-association.pl  AMC-gui-choose_columns.glade  AMC-gui-choose_students.glade  AMC-gui-main_window.glade  AMC-gui-overwritten.glade  AMC-gui-source_latex_choix_zip.glade  AMC-gui-source_latex_dialog.glade  AMC-gui-unrecognized.glade  AMC-gui.pl.in  AMC-imprime.pl
local/: deb-auto-changelog.in  deb4ppa  deb822toplain.pl  derniere-version.pl  versions.pl
man/: auto-multiple-choice.1
models/: Makefile
ppa/: auto-multiple-choice-common.install  auto-multiple-choice-common.manpages  auto-multiple-choice-common.menu  auto-multiple-choice-doc-pdf.doc-base  auto-multiple-choice-doc-pdf.docs  auto-multiple-choice-doc.doc-base  auto-multiple-choice.install  control  copyright  rules  watch
sty/: Makefile.am  automultiplechoice.dtx  automultiplechoice.dtx.in  automultiplechoice.sty
tests/: Makefile  all_tests  check  random-txt.pl  selected_tests  try_one.sh
tests/AMC/: Test.pm
tests/checks/: perl-tidy.sh
tex/: Makefile  automultiplechoice.dtx.in  get-subxy.pl
trunk/: AMC-analyse.pl  AMC-association-auto.pl  AMC-detect.cc  AMC-export.pl  AMC-gui-choix_postcorrect.glade  AMC-gui-choix_projet.glade  AMC-gui-cleanup.glade  AMC-gui-edit_preferences.glade  AMC-gui-main_window.glade  AMC-gui-saisie_auto.glade  AMC-gui-source_latex_dialog.glade  AMC-gui.pl.in  AMC-mailing.pl  AMC-meptex.pl  AMC-note.pl  AMC-prepare.pl  ChangeLog  auto-multiple-choice.in  auto-multiple-choice.spec.in
trunk/I18N/: po-clean.pl.in
trunk/debian/: auto-multiple-choice.postinst  auto-multiple-choice.postrm  copyright
trunk/doc/: Makefile-site  auto-multiple-choice.en.in.xml  auto-multiple-choice.fr.in.xml
trunk/interfaces/: amc-txt.lang
trunk/local/: deb-auto-changelog.in  deb4ppa  derniere-version.pl  versions.pl
(+436 files in other folders)
